# big-dune-project

./: Dockerfile  README.md  apply-patches.sh
aarch64/: dune
arm64/: hello.opam  hello.opam.locked
x86_64/: dune  hello.opam  hello.opam.locked
